--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -419,6 +419,27 @@ address {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  position: relative;
+}
+
+.menu-btn {
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  top: 10px;
+  right: 15px;
+}
+
+@media screen and (min-width: 768px) {
+  .menu-btn {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .menu-btn {
+    display: none;
+  }
 }
 
 .gallery-menu {
