--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -6,5 +6,22 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  position: relative;
   // min-height: 60px;
+}
+
+.menu-btn {
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  top: 10px;
+  right: 15px;
+
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
+
+  @media screen and (min-width: 1200px) {
+    display: none;
+  }
 }
