--- a/css/main.css
+++ b/css/main.css
@@ -690,6 +690,12 @@ main {
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
 }
 
+@media screen and (min-width: 768px) {
+  .header-menu {
+    display: none;
+  }
+}
+
 .hero {
   display: flex;
   text-align: center;
