--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -495,6 +495,12 @@ main {
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
 }
 
+@media screen and (min-width: 768px) {
+  .header-menu {
+    display: none;
+  }
+}
+
 .gallery-menu {
   margin-bottom: 40px;
 }
