--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -12,30 +12,41 @@
   margin-right: auto;
   margin-left: auto;
 
-  //  @media screen and (min-resolution: 2dppx) {
-  //   background-image: linear-gradient(
-  //       rgba(47, 48, 58, 0.6),
-  //       rgba(47, 48, 58, 0.6)
-  //     ),
-  //     url('../images/hero@2x.jpg');
-  // }
+  @media screen and (min-device-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx),
+    screen and (min-width: 320px) {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url("../../images/hero@2x.jpg");
+  }
 
   @media screen and (min-width: 768px) {
     max-width: 768px;
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
       url(../images/hero-tablet.jpg);
+  }
 
-    @media screen and (min-resolution: 2dppx) {
-      background-image: linear-gradient(rgba(47, 48, 58, 0.6), rgba(47, 48, 58, 0.4)),
-        url("../images/hero-tablet@2x.jpg");
-    }
+  @media screen and (min-device-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx),
+    screen and (min-width: 768px) {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url(../../images/hero-tablet@2x.jpg);
   }
 
   @media screen and (min-width: 1200px) {
     min-height: 600px;
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)),
-      url(../images/hero-img.jpg);
+      url(../../images/hero-desktop.jpg);
     max-width: 1600px;
+  }
+
+  @media screen and (min-device-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx),
+    screen and (min-width: 1200px) {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)),
+      url("../../images/hero-desktop@2x.jpg");
   }
 }
 
@@ -66,43 +77,3 @@
     width: 696px;
   }
 }
-
-// .background-image: linear-gradient(
-//       rgba(47, 48, 58, 0.6),
-//       rgba(47, 48, 58, 0.6)
-//     ),
-//     url('../images/hero-mobile.jpg');
-//   background-size: cover;
-//   background-position: center;
-//   background-repeat: no-repeat;
-
-//   @media screen and (min-resolution: 2dppx) {
-//     background-image: linear-gradient(
-//         rgba(47, 48, 58, 0.6),
-//         rgba(47, 48, 58, 0.6)
-//       ),
-//       url('../images/hero-mobile@2x.jpg');
-//   }
-
-//   @media screen and (min-width: 480px) {
-//     background-image: linear-gradient(
-//         rgba(47, 48, 58, 0.6),
-//         rgba(47, 48, 58, 0.6)
-//       ),
-//       url('../images/hero-tablet.jpg');
-
-//     @media screen and (min-resolution: 2dppx) {
-//       background-image: linear-gradient(
-//           rgba(47, 48, 58, 0.6),
-//           rgba(47, 48, 58, 0.6)
-//         ),
-//         url('../images/hero-tablet@2x.jpg');
-//     }
-//   }
-
-//   @media screen and (min-width: 768px) {
-//     background-image: linear-gradient(
-//         rgba(47, 48, 58, 0.6),
-//         rgba(47, 48, 58, 0.6)
-//       ),
-//       url('../images/hero-desktop)
