--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,6 +3,7 @@
 @import "./utils/visually-hidden";
 @import "./components/container";
 @import "./components/section";
+@import "./components/mobile-menu";
 @import "./components/logo";
 @import "./components/navigation";
 @import "./components/contacts";
