--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -648,11 +648,13 @@ main {
   letter-spacing: 0.03em;
   transform: translatey(100%);
   transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
+  overflow: scroll;
 }
 
 @media screen and (min-width: 768px) {
   .overlay {
     padding: 49px 24px;
+    overflow: hidden;
   }
 }
 
