--- a/sass/layout/_gallery.scss
+++ b/sass/layout/_gallery.scss
@@ -117,9 +117,11 @@
   letter-spacing: 0.03em;
   transform: translatey(100%);
   transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
+  overflow: scroll;
 
   @media screen and (min-width: 768px) {
     padding: 49px 24px;
+    overflow: hidden;
   }
 
   @media screen and (min-width: 1200px) {
