--- a/css/main.css
+++ b/css/main.css
@@ -290,10 +290,10 @@ main {
   background-color: #2196f3;
   width: 100%;
   height: 4px;
-  display: block;
   border-radius: 2px;
   position: absolute;
   top: 44px;
+  left: 3px;
 }
 
 .menu-nav {
