--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -62,10 +62,10 @@
     background-color: $accent-color;
     width: 100%;
     height: 4px;
-    display: block;
     border-radius: 2px;
     position: absolute;
     top: 44px;
+    left: 3px;
   }
 }
 
